# AgriRipeness-Backend

./: .gitignore  CHANGELOG.md  Dockerfile  HANDOVER.md  Procfile  README.md  docker-compose.yml  manage.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
.github/workflows/: deploy.yml
agriripeness_api/: asgi.py  settings.py  urls.py  wsgi.py
templates/admin/: generate_api_key.html
users/: admin.py  authentication.py  email_utils.py  models.py  serializers.py  services.py  urls.py  utils.py  views.py
users/management/commands/: assign_roles.py  create_superuser_if_missing.py  test_email.py
users/migrations/: 0001_initial.py  0002_userprofile_last_device_activation_and_more.py  0003_remove_unused_fields.py  0004_add_organization.py  0005_create_default_organization.py  0006_userprofile_password_change_required_and_more.py  0007_userprofile_api_key_short.py  0008_add_unique_email_constraint.py  0009_analysisrecord_photo_number_and_more.py  0010_analysisrecord_posicion_cuartel_and_more.py  0011_remove_cuartel_hilera.py  0012_fix_empty_email_constraint.py
