[project]
name = "agriripeness-backend"
version = "0.1.0"
description = "Backend API para AgriRipeness - Sistema de análisis de madurez de cultivos mediante IA para aplicación móvil React Native"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "django-ratelimit>=4.1.0",
    "django-redis>=6.0.0",
    "django-rest-framework>=0.1.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
    "psycopg>=3.2.11",
    "psycopg-binary>=3.2.11",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sendgrid>=6.11.0",
    "whitenoise>=6.8.0",
]

[tool.setuptools]
packages = ["agriripeness_api", "users"]
